<resources>
    <string name="app_name">Remote Thermostat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="picker_value">%d</string>
    <string name="label_set_temperature">Temperature</string>
    <string name="label_set_delay">Delay</string>
    <string name="label_set_auto_shutdown">Auto Shutdown</string>
    <string name="label_set_raspberry_ip">Remote IP</string>
    <string name="label_set_coordinates">Coordinates</string>

    <string name="value_default_temperature">20°C</string>
    <string name="value_default_delay">10 mins</string>
    <string name="value_default_auto_shutdown">2 hours</string>
    <string name="value_default_raspberry_ip">192.168.100.100</string>
    <string name="value_default_coordinates">45.643441,12.5915619</string>

    <string name="title_set_temperature">Set Temperature</string>
    <string name="title_set_delay">Set Delay</string>
    <string name="title_set_auto_shutdown">Set Auto Shutdown</string>
    <string name="title_set_raspberry_ip">Set Remote Hostname</string>
    <string name="title_set_coordinates">Set Coordinates</string>
    <string name="celsius">°C</string>
</resources>
