<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_head"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:src="@drawable/sun" />

            <TextView
                android:id="@+id/current_outside_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/weather_icon"
                android:paddingTop="15dp"
                android:text="19 °C"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_outside_temp"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/weather_icon"
                android:paddingTop="15dp"
                android:text="MIN:" />

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_outside_temp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/min_temp"
                android:paddingTop="15dp"
                android:text="MAX:" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view_head"
        android:fillViewport="true">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_body"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/set_temperature_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/label_set_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/label_set_temperature"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/temperature_number_picker_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/value_default_temperature" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/set_delay_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/set_temperature_view">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/label_set_delay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/label_set_delay"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/delay_number_picker_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/value_default_delay" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/set_auto_shutdown_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/set_delay_view">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/label_set_auto_shutdown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/label_set_auto_shutdown"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/auto_shutdown_number_picker_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/value_default_auto_shutdown" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/set_raspberry_ip_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/set_auto_shutdown_view">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/label_set_raspberry_ip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/label_set_raspberry_ip"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/raspberry_ip_text_input_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/value_default_raspberry_ip"
                            android:textSize="10dp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/set_coordinates_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/set_raspberry_ip_view">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/label_set_coordinates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/label_set_coordinates"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/raspberry_coordinates_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/value_default_coordinates"
                            android:textSize="10dp" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </ScrollView>

</RelativeLayout>